fix alignment issues

--- a/style.css
+++ b/style.css
@@ -5,45 +5,65 @@ body {
 .header {
     background-color: #1F2936;
     display: flex;
-    padding: 0px 90px;
+    /* padding: 0px 90px; */
     flex-direction: column;
-    flex-wrap: nowrap;
-    color: white;
+    flex-wrap: wrap;
+    color: #e5e7eb;
+    font-size: 18px;
+    padding-bottom: 90px;
+    align-content: space-around;
+}
+
+.h-main-text{
+    font-size: 48px;
+    font-weight: 800;
+    color: #F9FAF8;
+}
+
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
 }
 
 .navbar {
     display: flex;
+    justify-content: space-between;
 }
 
 
 .links {
     display: flex;
-    align-self: flex-end;
-    flex-grow: 1;
-    justify-content: flex-end;
     gap: 10px
 }
 
-.break {
-    flex-basis: 100%;
-    height: 0;
-  }
 
   .content {
     display: flex;
-    padding-top: 90px;
-  }
-
-  .content-image {
-        display: flex;
-    flex-grow: 1;
-    gap: 10px;
-    justify-content: space-around
+    gap: 20px;
   }
 
   .content-info {
-    text-align: center;
+    display: flex;
+    /* justify-content: flex-start; */
+    align-items: flex-start;
+    flex-direction: column;
+    /* flex-grow: 0;
   }
+
+  .content-image {
+    display: flex;
+    flex-grow: 0.5;
+    gap: 10px;
+    justify-content: space-around;
+    
+    
+  }
+
+  img {
+    height: 216px;
+    width: 400px;
+  }
+
 
   .second-part {
     display: flex;
@@ -59,7 +79,7 @@ body {
     justify-content: space-around;
     margin-top: 40px;
   }
-  img {
+  .image-boxes img {
     height: 250px;
     width: 250px;
     border-radius: 25px;
